--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Altairly – Free Chrome Extension</title>
+<title>Altairly - Shopping Tool for Amazon</title>
 <style>
   body {
     font-family: 'Century Gothic', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #0f2143; /* Dark Midnight Blue */
+    background-color: #0f2143;
     color: #ffffff;
     text-align: center;
   }
   header {
-    background-color: #213768; /* Slightly lighter Dark Blue */
+    background-color: #213768;
     padding: 40px 20px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -28,7 +28,7 @@
   header h1 {
     display: inline-block;
     font-size: 2em;
-    color: #f3d01e; /* Gold */
+    color: #f3d01e;
     margin: 0;
     vertical-align: middle;
   }
@@ -41,13 +41,13 @@
     max-width: 720px;
     margin: 30px auto;
     padding: 20px;
-    background-color: #1e3568; /* Extension panel blue */
+    background-color: #1e3568;
     border-radius: 20px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.3);
   }
   .btn {
     display: inline-block;
-    background-color: #7b3fe4; /* Cosmic Purple */
+    background-color: #7b3fe4;
     color: #ffffff;
     text-decoration: none;
     padding: 14px 28px;
@@ -58,7 +58,7 @@
     transition: all 0.3s ease;
   }
   .btn:hover {
-    background-color: #378de5; /* Hover blue */
+    background-color: #378de5;
     box-shadow: 0 4px 12px rgba(0,0,0,0.3);
   }
   .features {
@@ -67,7 +67,7 @@
   }
   .features h2 {
     font-size: 1.6em;
-    color: #ffd814; /* Gold */
+    color: #ffd814;
     margin-bottom: 12px;
   }
   .features ul {
@@ -82,9 +82,21 @@
   }
   .features li:before {
     content: "✔";
-    color: #0bbb37; /* Green check */
+    color: #0bbb37;
     position: absolute;
     left: 0;
+  }
+  .screenshots {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 12px;
+    margin-top: 30px;
+  }
+  .screenshots img {
+    max-width: 220px;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.4);
   }
   footer {
     margin-top: 50px;
@@ -104,7 +116,7 @@
 <body>
 
 <header>
-  <img src="icons/Altairly_logo.png" alt="Altairly Logo">
+  <img src="src/Altarly_logo.png" alt="Altairly Logo">
   <h1>Altairly</h1>
   <p>Smarter shopping. Save money. Unlock free shipping faster.</p>
   <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Add to Chrome</a>
@@ -124,6 +136,16 @@
   <p>Altairly helps you shop smarter on Amazon by showing recommendations that fit your cart perfectly. No sign-up required — just install and start saving instantly.</p>
 
   <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Install Free Extension</a>
+
+  <div class="screenshots">
+    <img src="src/Altairy_Background.png" alt="Altairly Background">
+    <img src="src/Altairy_Background_alt.png" alt="Altairly Background Alternate">
+    <img src="src/Altairy_Tile.png" alt="Altairly Tile">
+    <img src="src/Altairy_Tile3.png" alt="Altairly Tile 3">
+    <img src="src/Screenshot11.png" alt="Altairly Screenshot 1">
+    <img src="src/Screenshot22.png" alt="Altairly Screenshot 2">
+    <img src="src/Screenshot33.png" alt="Altairly Screenshot 3">
+  </div>
 </div>
 
 <footer>
