--- a/index.html
+++ b/index.html
@@ -9,147 +9,208 @@
     font-family: 'Century Gothic', sans-serif;
     margin: 0;
     padding: 0;
+    letter-spacing: 0.3px; 
     background-color: #0f2143;
     color: #ffffff;
-    text-align: center;
+    line-height: 1.6;
   }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
   header {
     background-color: #213768;
-    padding: 40px 20px;
+    padding: 60px 20px;
+    text-align: center;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
   }
   header img {
-    width: 60px;
-    height: 60px;
-    vertical-align: middle;
-    margin-right: 12px;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 15px;
   }
   header h1 {
-    display: inline-block;
-    font-size: 2em;
+    font-size: 2.5em;
     color: #f3d01e;
-    margin: 0;
-    vertical-align: middle;
+    margin: 10px 0;
   }
   header p {
-    margin-top: 10px;
-    font-size: 1.1em;
+    font-size: 1.2em;
     color: #b0c4ff;
-  }
-  .container {
-    max-width: 720px;
-    margin: 30px auto;
-    padding: 20px;
-    background-color: #1e3568;
-    border-radius: 20px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    line-height: .7em;
+    margin-bottom: 33px;
   }
   .btn {
     display: inline-block;
-    background-color: #7b3fe4;
-    color: #ffffff;
-    text-decoration: none;
-    padding: 14px 28px;
-    font-size: 1.2em;
-    border-radius: 30px;
-    margin-top: 20px;
+    background-color: #ffd814;
+    color: #222;
     font-weight: bold;
-    transition: all 0.3s ease;
+    font-size: 1.2em;
+    padding: 16px 32px;
+    border-radius: 30px;
+    transition: 0.3s;
   }
   .btn:hover {
-    background-color: #378de5;
+    background-color: #f3c400;
+  }
+
+  .hero-image {
+    width: 100%;
+    max-width: 600px; /* controls maximum size */
+    height: auto;     /* maintains aspect ratio */
+    border-radius: 16px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    display: block;
+    margin: 30px auto;
+}
+
+.Altair-image {
+    width: 100%;
+    max-width: 400px; /* controls maximum size */
+    height: auto;     /* maintains aspect ratio */
+    border-radius: 16px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    display: block;
+    margin: 30px auto;
+}
+  .section {
+    max-width: 900px;
+    margin: 50px auto;
+    padding: 0 20px;
   }
-  .features {
-    margin-top: 30px;
-    text-align: left;
-  }
-  .features h2 {
-    font-size: 1.6em;
+
+  .section h2 {
+    font-size: 2em;
     color: #ffd814;
-    margin-bottom: 12px;
+    margin-bottom: 20px;
+    text-align: center;
   }
-  .features ul {
-    list-style: none;
-    padding: 0;
-  }
-  .features li {
-    margin-bottom: 12px;
-    padding-left: 24px;
-    position: relative;
-    font-size: 1em;
-  }
-  .features li:before {
-    content: "✔";
-    color: #0bbb37;
-    position: absolute;
-    left: 0;
-  }
-  .screenshots {
+
+.feature-item {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 12px;
-    margin-top: 30px;
-  }
-  .screenshots img {
-    max-width: 220px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 80px 10%;
+    gap: 50px;
+    border-radius: 20px;
+}
+
+.feature-item img {
+    max-width: 45%;
+    width: 100%;
+    height: auto;
     border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.4);
-  }
-  footer {
-    margin-top: 50px;
-    padding: 20px;
-    font-size: 0.9em;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+}
+
+.feature-item div {
+    max-width: 50%;
+    text-align: left;
+}
+
+.feature-item h3 {
+    font-size: 2em;
+    margin-bottom: 15px;
+    color: #ffd814;
+}
+
+.feature-item p {
+    font-size: 1.2em;
     color: #b0c4ff;
+}
+
+.feature-image-container {
+    max-width: 100%;
+    aspect-ratio: 16/9; /* makes container rectangular */
+    overflow: hidden;
+}
+.feature-image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.screenshots {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.screenshots img {
+  max-width: 320px;  /* bigger than before */
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  transition: transform 0.3s;
+}
+
+.screenshots img:hover {
+  transform: scale(1.05);
+}
+  footer {
+    text-align: center;
+    padding: 30px 20px;
+    background-color: #213768;
+    color: #b0c4ff;
+    margin-top: 50px;
+    font-size: 0.9em;
   }
+
   footer a {
     color: #3b98f5;
-    text-decoration: none;
   }
-  footer a:hover {
-    text-decoration: underline;
-  }
+
 </style>
 </head>
 <body>
 
 <header>
-  <img src="src/Altarly_logo.png" alt="Altairly Logo">
-  <h1>Altairly</h1>
-  <p>Smarter shopping. Save money. Unlock free shipping faster.</p>
-  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Add to Chrome</a>
+  <img src="src/Altairy_Background_alt.png" alt="Altairly Hero Image" class="hero-image">
+  <p>Smarter shopping on Amazon. Find perfectly priced items and unlock free shipping easily. </p>
+  <p>Altairly is a free Chrome Extension that helps you find perfectly priced items to qualify you for free shipping on Amazon.</p>
+  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=hero_button" target="_blank">Add Altairly to Chrome</a>
 </header>
 
-<div class="container">
-  <div class="features">
-    <h2>Why Altairly?</h2>
-    <ul>
-      <li>See the exact price needed to unlock free shipping</li>
-      <li>Discover perfectly priced items for your cart</li>
-      <li>Random product suggestions at any price</li>
-      <li>Safe, free, and easy to install</li>
-    </ul>
-  </div>
-
-  <p>Altairly helps you shop smarter on Amazon by showing recommendations that fit your cart perfectly. No sign-up required — just install and start saving instantly.</p>
-
-  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Install Free Extension</a>
-
-  <div class="screenshots">
-    <img src="src/Altairy_Background.png" alt="Altairly Background">
-    <img src="src/Altairy_Background_alt.png" alt="Altairly Background Alternate">
-    <img src="src/Altairy_Tile.png" alt="Altairly Tile">
-    <img src="src/Altairy_Tile3.png" alt="Altairly Tile 3">
-    <img src="src/Screenshot11.png" alt="Altairly Screenshot 1">
-    <img src="src/Screenshot22.png" alt="Altairly Screenshot 2">
-    <img src="src/Screenshot33.png" alt="Altairly Screenshot 3">
+<div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
+  <img src="src/Screenshot_view.png" alt="Exact Price" style="margin-right: 20px;">
+  <div>
+    <h3>Exact Price Suggestions</h3>
+    <p>Altairly shows you the exact amount needed to reach free shipping on Amazon. Avoid overspending and make your cart perfectly balanced for maximum savings.</p>
+    <p>You can also manually enter any amount to search for items with an exact price. </p>
   </div>
 </div>
 
+<div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
+  <img src="src/Screenshot22.png" alt="Discover Items">
+  <div>
+    <h3>Discover New Items</h3>
+    <p>Browse random products at any price to improve your cart efficiency. Altairly helps you find items you might not have considered, making your shopping smarter and more fun.</p>
+  </div>
+</div>
+
+<div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
+  <img src="src/Screenshot44.png" alt="Safe & Easy">
+  <div>
+    <h3>Safe & Easy</h3>
+    <p>Altairly is free, safe, and requires no account. Simply add the Chrome Extension and instantly get smarter shopping recommendations for Amazon with no setup required.</p>
+    <p>As a lightweight extension, there is no user data or Amazon account data saved.</p>
+    </div>
+</div>
+
+
+
+<div class="section" style="text-align:center; margin-top:50px;">
+  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=center_button" target="_blank">Add Extension to Chrome</a>
+</div>
+
 <footer>
-  <p>© 2025 Altairly. Not affiliated with Amazon or other retailers. Available only on the <a href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Chrome Web Store</a>.</p>
+  <p>© 2025 Altairly. Not affiliated with Amazon or other retailers. Available only on the <a href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=footer" target="_blank">Chrome Web Store</a>.</p>
+  <a href="privacy.html" target="_blank">Privacy Policy</a>
 </footer>
 
 </body>
