--- a/index.html
+++ b/index.html
@@ -178,6 +178,23 @@
 
   gtag('config', 'AW-17492109758');
 </script>
+  <!-- Event snippet for Submit lead form conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+function gtag_report_conversion(url) {
+  var callback = function () {
+    if (typeof(url) != 'undefined') {
+      window.location = url;
+    }
+  };
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17492109758/S0E1COyzw4kbEL7T8ZRB',
+      'event_callback': callback
+  });
+  return false;
+}
+</script>
+
 </head>
 <body>
 
