--- a/index.html
+++ b/index.html
@@ -208,27 +208,36 @@ function gtag_report_conversion(url) {
 <div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
   <img src="src/Screenshot_view.png" alt="Exact Price" style="margin-right: 20px;">
   <div>
-    <h3>Exact Price Suggestions</h3>
-    <p>Altairly shows you the exact amount needed to reach free shipping on Amazon. Avoid overspending and make your cart perfectly balanced for maximum savings.</p>
-    <p>You can also manually enter any amount to search for items with an exact price. </p>
+    <h3>What does Altairly do exactly?</h3>
+    <p>It's a simple free Chrome Browser extension that sees your current cart amount, and provides the ability to search for items of the exact amount needed to reach free shipping.</p>
+    <p>If you are ever $3.14 short of the free shipping threshold or just wanted to see whatever items that were an odly specific price, this is the extention for you! </p>
   </div>
 </div>
 
 <div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
   <img src="src/Screenshot22.png" alt="Discover Items">
   <div>
-    <h3>Discover New Items</h3>
-    <p>Browse random products at any price to improve your cart efficiency. Altairly helps you find items you might not have considered, making your shopping smarter and more fun.</p>
+    <h3>Exact Price Suggestions</h3>
+     <p>Altairly shows you the exact amount needed to reach free shipping on Amazon. Avoid overspending and make your cart perfectly balanced for maximum savings.</p>
+    <p>You can also manually enter any amount to search for items with an exact price. </p>
   </div>
 </div>
 
-<div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
+<div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
   <img src="src/Screenshot44.png" alt="Safe & Easy">
   <div>
     <h3>Safe & Easy</h3>
     <p>Altairly is free, safe, and requires no account. Simply add the Chrome Extension and instantly get smarter shopping recommendations for Amazon with no setup required.</p>
     <p>As a lightweight extension, there is no user data or Amazon account data saved.</p>
     </div>
+</div>
+
+  <div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
+  <img src="src/Screenshot33.png" alt="Discover Items">
+  <div>
+    <h3>Discover New Items</h3>
+    <p>Browse random products at any price to improve your cart efficiency. Altairly helps you find items you might not have considered, making your shopping smarter and more fun.</p>
+  </div>
 </div>
 
 
