--- a/Privacy.html
+++ b/Privacy.html
@@ -1,85 +1,124 @@
-# Privacy Policy
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - Altairly</title>
+  <link rel="stylesheet" href="styles.css"> <!-- reuse same stylesheet as homepage -->
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #0f2143;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 60px 20px 20px;
+      background-color: #142a57;
+    }
+    header h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    .content {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+    h2 {
+      color: #4db8ff;
+      margin-top: 40px;
+    }
+    p, li {
+      font-size: 1.1em;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #142a57;
+      margin-top: 40px;
+    }
+    footer a {
+      color: #4db8ff;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Privacy Policy</h1>
+    <p><strong>Effective Date:</strong> 3/19/2025</p>
+  </header>
 
-**Effective Date:** 3/19/2025
+  <div class="content">
+    <p>This Privacy Policy explains how <strong>Altairly</strong> ("we," "our," or "us") collects, uses, and protects user data when you use our Chrome extension.</p>
+    <p>By using our extension, you agree to the collection and use of information in accordance with this policy.</p>
 
-This Privacy Policy explains how **Altairly** ("we," "our," or "us") collects, uses, and protects user data when you use our Chrome extension.
+    <h2>1. Information We Collect</h2>
+    <p>Our Chrome extension collects the following data to provide its functionality:</p>
+    <ul>
+      <li><strong>Cart Total Information:</strong> We collect your cart total amount when you visit certain Amazon pages (e.g., <code>/cart</code>, <code>/gp/cart</code>, and <code>/gp/buy/</code>) to display relevant savings and deals.</li>
+      <li><strong>User Activity:</strong> We may track user interactions with the extension, including clicks and whether the popup is opened.</li>
+      <li><strong>Website Content:</strong> We access page elements (e.g., cart total text) on supported Amazon pages to retrieve cart total amounts.</li>
+    </ul>
+    <p><strong>We do not collect any of the following:</strong></p>
+    <ul>
+      <li>Personally Identifiable Information (PII), such as your name, email address, or payment details.</li>
+      <li>Health information, location data, or authentication credentials.</li>
+      <li>Financial or payment information.</li>
+      <li>Web history beyond the Amazon cart and checkout pages.</li>
+    </ul>
 
-By using our extension, you agree to the collection and use of information in accordance with this policy.
+    <h2>2. How We Use Collected Data</h2>
+    <ul>
+      <li>Calculate and display your current Amazon cart total.</li>
+      <li>Determine and highlight potential savings.</li>
+      <li>Re-open the extension popup when the cart total changes.</li>
+    </ul>
 
----
+    <h2>3. Data Sharing and Security</h2>
+    <ul>
+      <li><strong>No Data Sharing:</strong> We do not sell, share, or transfer user data to third parties for marketing or unrelated purposes.</li>
+      <li><strong>Data Security:</strong> Any data temporarily stored (e.g., cart total) is handled securely and is used only to perform the extension's intended functionality.</li>
+      <li><strong>No Third-Party Tracking:</strong> We do not use third-party analytics or tracking services.</li>
+    </ul>
 
-## 1. Information We Collect
+    <h2>4. Remote Code Usage</h2>
+    <p>Our extension does <strong>not</strong> use or load remote code. All functionality is handled locally by the extension scripts installed in your Chrome browser.</p>
 
-Our Chrome extension collects the following data to provide its functionality:
+    <h2>5. Permissions Explanation</h2>
+    <ul>
+      <li><code>activeTab</code>: Used to interact with the current Amazon tab when the user is on relevant cart or checkout pages.</li>
+      <li><code>scripting</code>: Used to execute scripts on Amazon cart and checkout pages to extract cart total data.</li>
+      <li><code>storage</code>: Used to temporarily store the cart total value locally.</li>
+      <li><strong>Host Permissions</strong> (e.g., <code>https://www.amazon.com/*</code>): Required to access and extract data from supported Amazon pages where the cart total is displayed.</li>
+    </ul>
 
-- **Cart Total Information:** We collect your cart total amount when you visit certain Amazon pages (e.g., `/cart`, `/gp/cart`, and `/gp/buy/`) to display relevant savings and deals.  
-- **User Activity:** We may track user interactions with the extension, including clicks and whether the popup is opened.  
-- **Website Content:** We access page elements (e.g., cart total text) on supported Amazon pages to retrieve cart total amounts.
+    <h2>6. User Rights</h2>
+    <ul>
+      <li><strong>Access:</strong> Request the data collected by the extension.</li>
+      <li><strong>Delete Data:</strong> Clear your cart total information from local storage by disabling or uninstalling the extension.</li>
+      <li><strong>Opt-out:</strong> You can disable the extension at any time in Chrome.</li>
+    </ul>
 
-**We do not collect any of the following:**  
-- Personally Identifiable Information (PII), such as your name, email address, or payment details.  
-- Health information, location data, or authentication credentials.  
-- Financial or payment information.  
-- Web history beyond the Amazon cart and checkout pages.
+    <h2>7. Changes to This Privacy Policy</h2>
+    <p>We may update this privacy policy periodically. Changes will be reflected on this page with an updated effective date.</p>
 
----
+    <h2>8. Contact Us</h2>
+    <p>For questions about this Privacy Policy, please contact us at: <br><strong>obliquitymarketing@gmail.com</strong></p>
 
-## 2. How We Use Collected Data
+    <h2>Why Pin the Extension?</h2>
+    <p>Pinning the extension to your Chrome toolbar ensures quick access when you need to check your cart total and potential savings on Amazon. Click the puzzle icon (⚙️) in Chrome, and click the pin icon next to <strong>Roundup to Free Shipping</strong>.</p>
+  </div>
 
-The collected data is used solely to:  
-- Calculate and display your current Amazon cart total.  
-- Determine and highlight potential savings.  
-- Re-open the extension popup when the cart total changes.
-
----
-
-## 3. Data Sharing and Security
-
-- **No Data Sharing:** We do not sell, share, or transfer user data to third parties for marketing or unrelated purposes.  
-- **Data Security:** Any data temporarily stored (e.g., cart total) is handled securely and is used only to perform the extension's intended functionality.  
-- **No Third-Party Tracking:** We do not use third-party analytics or tracking services.
-
----
-
-## 4. Remote Code Usage
-
-Our extension does **not** use or load remote code. All functionality is handled locally by the extension scripts installed in your Chrome browser.
-
----
-
-## 5. Permissions Explanation
-
-- **`activeTab`:** Used to interact with the current Amazon tab when the user is on relevant cart or checkout pages.  
-- **`scripting`:** Used to execute scripts on Amazon cart and checkout pages to extract cart total data.  
-- **`storage`:** Used to temporarily store the cart total value locally.  
-- **Host Permissions (e.g., `https://www.amazon.com/*`):** Required to access and extract data from supported Amazon pages where the cart total is displayed.
-
----
-
-## 6. User Rights
-
-You have the right to:  
-- **Access:** Request the data collected by the extension.  
-- **Delete Data:** Clear your cart total information from local storage by disabling or uninstalling the extension.  
-- **Opt-out:** You can disable the extension at any time in Chrome.
-
----
-
-## 7. Changes to This Privacy Policy
-
-We may update this privacy policy periodically. Changes will be reflected on this page with an updated effective date.
-
----
-
-## 8. Contact Us
-
-For questions about this Privacy Policy, please contact us at:  
-**obliquitymarketing@gmail.com**
-
----
-
-### Why Pin the Extension?
-
-Pinning the extension to your Chrome toolbar ensures quick access when you need to check your cart total and potential savings on Amazon. Click the puzzle icon (⚙️) in Chrome, and click the pin icon next to **Roundup to Free Shipping**.
-
----
+  <footer>
+    <p>© 2025 Altairly | <a href="index.html">Back to Home</a></p>
+  </footer>
+</body>
+</html>
