--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ function gtag_report_conversion(url) {
 
 <footer>
   <p>© 2025 Altairly. Not affiliated with Amazon or other retailers. Available only on the <a href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Chrome Web Store</a>.</p>
-  <a href="privacy.html" target="_blank">Privacy Policy</a>
+  <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a>
 </footer>
 
 </body>
