--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 
 
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-K8K3FDST');</script>
+<!-- End Google Tag Manager -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Altairly - Shopping Tool for Amazon</title>
@@ -213,7 +220,13 @@ function gtag_report_conversion(url) {
   <p>Altairly is a free Chrome Extension that helps you find perfectly priced items to qualify you for free shipping on Amazon.</p>
   <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Add Altairly to Chrome</a>
 </header>
-
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-K8K3FDST');</script>
+<!-- End Google Tag Manager -->
 <div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
   <img src="src/Screenshot_view.png" alt="Exact Price" style="margin-right: 20px;">
   <div>
