--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
-  <!-- Google Tag Manager -->
+    <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -68,23 +66,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   .hero-image {
     width: 100%;
-    max-width: 600px; /* controls maximum size */
-    height: auto;     /* maintains aspect ratio */
+    max-width: 600px;
+    height: auto;
     border-radius: 16px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     display: block;
     margin: 30px auto;
-}
+  }
 
-.Altair-image {
-    width: 100%;
-    max-width: 400px; /* controls maximum size */
-    height: auto;     /* maintains aspect ratio */
-    border-radius: 16px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-    display: block;
-    margin: 30px auto;
-}
   .section {
     max-width: 900px;
     margin: 50px auto;
@@ -98,84 +87,250 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     text-align: center;
   }
 
-.feature-item {
+  .feature-item {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 80px 10%;
     gap: 50px;
     border-radius: 20px;
-}
+  }
 
-.feature-item img {
+  .feature-item img {
     max-width: 45%;
     width: 100%;
     height: auto;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-}
+  }
 
-.feature-item div {
+  .feature-item div {
     max-width: 50%;
     text-align: left;
-}
+  }
 
-.feature-item h3 {
+  .feature-item h3 {
     font-size: 2em;
     margin-bottom: 15px;
     color: #ffd814;
-}
+  }
 
-.feature-item p {
+  .feature-item p {
     font-size: 1.2em;
     color: #b0c4ff;
-}
+  }
 
-.feature-image-container {
-    max-width: 100%;
-    aspect-ratio: 16/9; /* makes container rectangular */
-    overflow: hidden;
-}
-.feature-image-container img {
+  .screenshots {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 30px;
+  }
+
+  .screenshots img {
+    max-width: 320px;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    transition: transform 0.3s;
+  }
 
-.screenshots {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 30px;
-}
+  .screenshots img:hover {
+    transform: scale(1.05);
+  }
 
-.screenshots img {
-  max-width: 320px;  /* bigger than before */
-  width: 100%;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-  transition: transform 0.3s;
-}
+    .info-container {
+            background-color: #213768; /* Slightly lighter Dark Blue */
+            border-radius: 12px;
+            padding: 15px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        }
+        #cart-total, #amount-needed, #free-shipping-threshold {
+            margin-bottom: 10px;
+            font-size: 16px;
+            font-weight: bold;
+        }
+        #cart-total {
+            color: #ffffff;
+        }
+        #amount-needed {
+            color: #f3d01e; /* Gold */
+            margin-bottom: 0px;
+        }
+        #free-shipping-threshold {
+            color: #3b98f5; /* Good Blue */
+        }
+        .progress-container {
+            width: 100%;
+            height: 22px;
+            background-color: #2a498d; /* Slightly darker blue */
+            border-radius: 12px;
+            overflow: hidden;
+            margin: 12px 0;
+        }
+        #progress-bar {
+            width: 0%;
+            height: 100%;
+            background-color: #3b98f5; /* Green */
+            transition: width 0.4s ease;
+            color: #ffffff;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
+            text-align: center;
+            line-height: 22px;
+            font-size: 13px;
+            font-weight: bold;
+            border-radius: 12px 0 0 12px;
+        }
+        button {
+            width: 100%;
+            padding: 14px;
+            background-color: #7b3fe4; /* Cosmic Purple */
+            color: #ffffff;
+            border: none;
+            border-radius: 30px;
+            font-size: 16px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            margin-bottom: 10px;
+        }
+        button:hover {
+            background-color: #378de5; /* Good Blue hover */
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        }
+        button.success {
+            background-color: #0bbb37; /* Green */
+        }
+        button.success:hover {
+            background-color: #09a52c; /* Darker Green */
+        }
+        .tooltip {
+            position: relative;
+            display: inline-block;
+        }
+        .tooltip .tooltip-text {
+            visibility: hidden;
+            width: 220px;
+            background-color: #233c74; /* Blue shade */
+            color: #ffffff;
+            text-align: center;
+            border-radius: 8px;
+            padding: 8px;
+            position: absolute;
+            z-index: 1;
+            bottom: 135%;
+            left: 50%;
+            transform: translateX(-50%);
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+        .tooltip:hover .tooltip-text {
+            visibility: visible;
+            opacity: 1;
+        }
+        input[type="number"] {
+            margin-top: 10px;
+            width: 80%;
+            padding: 10px;
+            border-radius: 12px;
+            border: 1px solid #378de5; /* Good Blue border */
+            font-size: 14px;
+            background-color: #1e3568;
+            color: #ffffff;
+        }
+        input[type="number"]::placeholder {
+            color: #b0c4ff;
+        }
 
-.screenshots img:hover {
-  transform: scale(1.05);
-}
-  footer {
+      .price-widget-container {
+    max-width: 320px;
+    margin: 20px auto;       /* smaller top/bottom gap */
+    padding: 30px 20px;      /* more padding for emphasis */
+    background-color: #0f2143; /* Alternate dark blue like your second feature section */
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     text-align: center;
-    padding: 30px 20px;
-    background-color: #213768;
-    color: #b0c4ff;
-    margin-top: 50px;
-    font-size: 0.9em;
-  }
+}
 
-  footer a {
-    color: #3b98f5;
-  }
+
+.price-widget-container .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 16px;
+}
+
+.price-widget-container .header h1 {
+    font-size: 1.8em;
+    color: #f3d01e;
+    margin: 0;
+}
+
+        /* Chrome, Safari, Edge, Opera */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+
+/* Constrain the logo image */
+.widget-logo {
+    max-width: 40px;      /* or smaller if needed */
+    max-height: 40px;
+    width: auto;
+    height: auto;
+}
+
+/* Slider styling */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 26px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: #378de5;
+  transition: 0.4s;
+  border-radius: 26px;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 22px;
+  width: 22px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+input:checked + .slider {
+  background-color: #7b3fe4;
+}
+input:checked + .slider:before {
+  transform: translateX(24px);
+}
+
 
 </style>
-  <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZHJS8QRCST"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -210,68 +365,149 @@ function gtag_report_conversion(url) {
   return false;
 }
 </script>
-
 </head>
-<body>
-
-<header>
-  <img src="src/Altairy_Background_alt.png" alt="Altairly Hero Image" class="hero-image">
-  <p>Smarter shopping on Amazon. Find perfectly priced items and unlock free shipping easily. </p>
-  <p>Altairly is a free Chrome Extension that helps you find perfectly priced items to qualify you for free shipping on Amazon.</p>
-  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Add Altairly to Chrome</a>
-</header>
-<!-- Google Tag Manager -->
+  <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-K8K3FDST');</script>
 <!-- End Google Tag Manager -->
-<div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
+<body>
+
+<header>
+  <img src="src/Altairy_Background_alt.png" alt="Altairly Hero Image" class="hero-image">
+  <p>Smarter shopping on Amazon. Find perfectly priced items and unlock free shipping easily.</p>
+  <p>Altairly is a free Chrome Extension that helps you find perfectly priced items to qualify you for free shipping on Amazon.</p>
+  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=hero_button" target="_blank">Add Altairly to Chrome</a>
+</header>
+
+<div class="price-widget-container">
+    <div class="header">
+        <img src="src/Altarly_logo.png" alt="Logo" class="widget-logo">
+        <h1>Altairly</h1>
+    </div>
+
+    <div class="info-container" style="display:flex; flex-direction:column; align-items:center; gap:12px; margin-bottom:20px;">
+        <div id="cart-total" style="font-size:1.1em; font-weight:bold; text-align:center;">
+            Today's Date Search $0.00
+        </div>
+        <div style="display:flex; align-items:center; gap:8px; font-size:1.1em; font-weight:bold; color:#ffffff;">
+            <span id="date-format-label">8/20</span>
+            <label class="switch">
+                <input type="checkbox" id="dateToggle">
+                <span class="slider"></span>
+            </label>
+            <span id="date-format-label-alt">20/8</span>
+        </div>
+    </div>
+
+    <button id="search-items" style="margin-bottom:16px;">Search Amazon $0.00</button>
+
+    <input type="number" id="manualPrice" placeholder="Enter your own price" style="margin-top:10px;">
+</div>
+
+<script>
+const dateToggle = document.getElementById("dateToggle");
+const manualPrice = document.getElementById("manualPrice");
+const amazonButton = document.getElementById("search-items");
+const cartTotal = document.getElementById("cart-total");
+const dateLabel = document.getElementById("date-format-label");
+const dateLabelAlt = document.getElementById("date-format-label-alt");
+
+// Return numbers without leading zeros, always with 2 decimals
+function getTodayPrice(format = "MMDD") {
+    const today = new Date();
+    const month = today.getMonth() + 1;
+    const day = today.getDate();
+    let value;
+    if (format === "MMDD") value = month + day / 100;
+    else value = day + month / 100;
+    return value.toFixed(2);
+}
+
+function updateWidget() {
+    // Update date price only
+    const datePrice = getTodayPrice(dateToggle.checked ? "DDMM" : "MMDD");
+    cartTotal.textContent = `Today's Date Search $${datePrice}`;
+
+    // Update button price based on manual input or date
+    const buttonPrice = manualPrice.value ? parseFloat(manualPrice.value).toFixed(2) : datePrice;
+    amazonButton.textContent = `Search Amazon $${buttonPrice}`;
+
+    // Update dynamic date labels
+    const today = new Date();
+    const month = today.getMonth() + 1;
+    const day = today.getDate();
+    dateLabel.textContent = `${month}/${day}`;
+    dateLabelAlt.textContent = `${day}/${month}`;
+}
+
+// Initial load
+updateWidget();
+
+// Event listeners
+dateToggle.addEventListener("change", updateWidget);
+manualPrice.addEventListener("input", updateWidget);
+
+// Amazon button click
+amazonButton.addEventListener("click", () => {
+    const priceVal = manualPrice.value ? parseFloat(manualPrice.value).toFixed(2) : getTodayPrice(dateToggle.checked ? "DDMM" : "MMDD");
+    
+    // Convert dollars to cents
+    const priceInCents = Math.round(parseFloat(priceVal) * 100);
+
+    // Build the working URL
+    const searchUrl = `https://www.amazon.com/s?rh=p_36%3A${priceInCents}-${priceInCents}%2Cp_76%3A2661625011&s=review-rank&dc&language=en_US&linkCode=ll2&linkId=43dfb7a3fc4579ba1c7f5700133a7ad4&qid=1742420852&rnid=2661623011&tag=obliquityma09-20&ref=sr_nr_p_76_1&ds=v1%3A79nMX8ksAEs9UDjAGX5bYZmvWI0GLBF5iJKc8emuHLs`;
+
+    window.open(searchUrl, "_blank");
+});
+</script>
+
+
+<!-- Feature Sections -->
+<div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
   <img src="src/Screenshot_view.png" alt="Exact Price" style="margin-right: 20px;">
   <div>
-    <h3>What does Altairly do exactly?</h3>
-    <p>It's a simple free Chrome Browser extension that sees your current cart amount, and provides the ability to search for items of the exact amount needed to reach free shipping.</p>
-    <p>If you are ever $3.14 short of the free shipping threshold or just wanted to see whatever items that were an odly specific price, this is the extention for you! </p>
-  </div>
-</div>
-
-<div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
-  <img src="src/Screenshot22.png" alt="Discover Items">
-  <div>
     <h3>Exact Price Suggestions</h3>
-     <p>Altairly shows you the exact amount needed to reach free shipping on Amazon. Avoid overspending and make your cart perfectly balanced for maximum savings.</p>
-    <p>You can also manually enter any amount to search for items with an exact price. </p>
+    <p>Altairly shows you the exact amount needed to reach free shipping on Amazon. Avoid overspending and make your cart perfectly balanced for maximum savings.</p>
+    <p>You can also manually enter any amount to search for items with an exact price.</p>
   </div>
 </div>
 
 <div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
-  <img src="src/Screenshot44.png" alt="Safe & Easy">
-  <div>
-    <h3>Safe & Easy</h3>
-    <p>Altairly is free, safe, and requires no account. Simply add the Chrome Extension and instantly get smarter shopping recommendations for Amazon with no setup required.</p>
-    <p>As a lightweight extension, there is no user data or Amazon account data saved.</p>
-    </div>
-</div>
-
-  <div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
-  <img src="src/Screenshot33.png" alt="Discover Items">
+  <img src="src/Screenshot22.png" alt="Discover Items">
   <div>
     <h3>Discover New Items</h3>
     <p>Browse random products at any price to improve your cart efficiency. Altairly helps you find items you might not have considered, making your shopping smarter and more fun.</p>
   </div>
 </div>
 
-
-
-<div class="section" style="text-align:center; margin-top:50px;">
-  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Add Extension to Chrome</a>
+<div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
+  <img src="src/Screenshot44.png" alt="Safe & Easy">
+  <div>
+    <h3>Safe & Easy</h3>
+    <p>Altairly is free, safe, and requires no account. Simply add the Chrome Extension and instantly get smarter shopping recommendations for Amazon with no setup required.</p>
+    <p>As a lightweight extension, there is no user data or Amazon account data saved.</p>
+  </div>
 </div>
 
-<footer>
-  <p>© 2025 Altairly. Not affiliated with Amazon or other retailers. Available only on the <a href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Chrome Web Store</a>.</p>
-  <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a>
+<div class="section" style="text-align:center; margin-top:50px;">
+  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=center_button" target="_blank">Add Extension to Chrome</a>
+</div>
+
+<footer style="text-align:center; margin:50px 20px 20px;">
+  <p>© 2025 Altairly. Not affiliated with Amazon or other retailers. Available only on the <a href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=footer" target="_blank">Chrome Web Store</a>.</p>
+  <a href="privacy.html" target="_blank">Privacy Policy</a>
 </footer>
 
 </body>
 </html>
+
+
+
+
+
+
+
+
