--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <img src="src/Altairy_Background_alt.png" alt="Altairly Hero Image" class="hero-image">
   <p>Smarter shopping on Amazon. Find perfectly priced items and unlock free shipping easily.</p>
   <p>Altairly is a free Chrome Extension that helps you find perfectly priced items to qualify you for free shipping on Amazon.</p>
-  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=hero_button" target="_blank">Add Altairly to Chrome</a>
+  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Add Altairly to Chrome</a>
 </header>
 
 <div class="price-widget-container">
@@ -493,11 +493,11 @@ amazonButton.addEventListener("click", () => {
 </div>
 
 <div class="section" style="text-align:center; margin-top:50px;">
-  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=center_button" target="_blank">Add Extension to Chrome</a>
+  <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Add Extension to Chrome</a>
 </div>
 
 <footer style="text-align:center; margin:50px 20px 20px;">
-  <p>© 2025 Altairly. Not affiliated with Amazon or other retailers. Available only on the <a href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad&utm_content=footer" target="_blank">Chrome Web Store</a>.</p>
+  <p>© 2025 Altairly. Not affiliated with Amazon or other retailers. Available only on the <a href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Chrome Web Store</a>.</p>
   <a href="privacy.html" target="_blank">Privacy Policy</a>
 </footer>
 
