--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ input[type="number"]::placeholder, input[type="text"]::placeholder {
     max-width: 320px;
     margin: 20px auto;
     padding: 20px 20px;
-    background-color: #213768;
+    background-color: #0f2143;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     text-align: center;
@@ -348,7 +348,7 @@ input:checked + .slider:before {
 .tab-button {
     flex: 1;
     padding: 6px 8px;
-    background: #0f2143;
+    background: #142a57;
     color: #b0c4ff;
     border: none;
     cursor: pointer;
@@ -366,7 +366,7 @@ input:checked + .slider:before {
 }
 
 .tab-button.active {
-    background-color: #0f2143;
+    background-color: #2a498d;
     color: #ffffff;
     border-bottom: 2px solid #ffd814;
 }
