--- a/index.html
+++ b/index.html
@@ -493,6 +493,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <a class="btn" href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Add Altairly to Chrome</a>
 </header>
 
+   <div style="color:#f3d01e; text-align:center; font-size: 1.5em; margin-top: 7px">
+  <h3 style="margin: 0;">Extension Web Version</h3>
+</div>
+
 <div class="price-widget-container">
   <div class="header">
     <img src="src/Altarly_logo.png" alt="Logo" class="widget-logo">
