--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </header>
 
    <div style="color:#f3d01e; text-align:center; font-size: 1.5em; margin-top: 7px">
-  <h3 style="margin: 0;">Extension Web Version</h3>
+  <h3 style="margin: 0;">Prefer not to install? Try our Web Version.</h3>
 </div>
 
 <div class="price-widget-container">
@@ -682,7 +682,7 @@ tabButtons.forEach(btn => {
 <div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
   <img src="src/Screenshot_view.png" alt="Exact Price" style="margin-right: 20px;">
   <div>
-    <h3>Exact Price Suggestions</h3>
+    <h3>Only pay what’s needed. Altairly gives the exact price needed for free shipping.</h3>
     <p>Altairly shows you the exact amount needed to reach free shipping on Amazon. Avoid overspending and make your cart perfectly balanced for maximum savings.</p>
     <p>You can also manually enter any amount to search for items with an exact price.</p>
   </div>
@@ -691,7 +691,7 @@ tabButtons.forEach(btn => {
 <div class="feature-item" style="background-color:#0f2143; flex-direction: row-reverse;">
   <img src="src/Screenshot22.png" alt="Discover Items">
   <div>
-    <h3>Discover New Items</h3>
+    <h3>Find helpful items you’d never considered. Expand your cart smartly.</h3>
     <p>Browse random products at any price to improve your cart efficiency. Altairly helps you find items you might not have considered, making your shopping smarter and more fun.</p>
   </div>
 </div>
@@ -699,7 +699,7 @@ tabButtons.forEach(btn => {
 <div class="feature-item" style="background-color:#142a57; flex-direction: row-reverse;">
   <img src="src/Screenshot44.png" alt="Safe & Easy">
   <div>
-    <h3>Safe & Easy</h3>
+    <h3>Add to Chrome in seconds! No account, no clutter.</h3>
     <p>Altairly is free, safe, and requires no account. Simply add the Chrome Extension and instantly get smarter shopping recommendations for Amazon with no setup required.</p>
     <p>As a lightweight extension, there is no user data or Amazon account data saved.</p>
   </div>
