--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </header>
 
    <div style="color:#f3d01e; text-align:center; font-size: 1.5em; margin-top: 7px">
-  <h3 style="margin: 0;">Prefer not to install? Try our Web Version.</h3>
+  <h3 style="margin: 0;">Try our Web Version</h3>
 </div>
 
 <div class="price-widget-container">
