--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@ tabButtons.forEach(btn => {
 
 <footer style="text-align:center; margin:50px 20px 20px;">
   <p>© 2025 Altairly. Not affiliated with Amazon or other retailers. Available only on the <a href="https://chromewebstore.google.com/detail/altairly-shopping-helper/bddkchojjalmohakdmnhkneikoifjgad" target="_blank">Chrome Web Store</a>.</p>
-  <a href="privacy.html" target="_blank">Privacy Policy</a>
+  <a href="PrivacyPolicy.html" target="_blank">Privacy Policy</a>
 </footer>
 
 </body>
